--- a/arts.html
+++ b/arts.html
@@ -2,15 +2,15 @@
 <html lang="zh-Hant-TW">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/main.css">
   <title>藝術陶｜又煦陶作</title>
 </head>
 
@@ -49,14 +49,46 @@
           </ul>
         </div>
         <!-- menu-btn -->
-        <a href="./menu.html" class="navbar-toggler">
-          <div class="line-1"></div>
-          <div class="line-2"></div>
-        </a>
+        <div class="barres">
+          <div class="hamburger1"></div>
+          <div class="hamburger2"></div>
+        </div>
       </div>
     </nav>
   </header>
   <!-- =========== NAVBR =========== -->
+  <!--  ========== MENU ========== -->
+  <div class="menu">
+    <div class="menubg"></div>
+    <div class="menu-content">
+      <ul class="menu-link-wrap">
+        <li> <a href="./index.html" class="menulink">首頁</a></li>
+        <li> <a href="./arts.html" class="menulink">藝術陶</a></li>
+        <li> <a href="./works.html" class="menulink">生活陶</a></li>
+        <li> <a href="./classes.html" class="menulink">課程教學</a></li>
+        <li> <a href="./contact.html" class="menulink">聯絡我們</a></li>
+      </ul>
+
+      <div class="menu-bottom-wrap">
+        <h6 class="menu-bottom-title">聯絡我們</h6>
+        <div class="menu-bottom-box1">
+          <p class="label">〒950 台東縣台東市杭州街118號1樓</p>
+          <p class="label">(+886) 921-271-867</p>
+        </div>
+        <div class="menu-bottom-box2">
+          <a href="https://www.instagram.com/yoshipottery/" target=_blank> <img src="./assets/instagram-02.svg"
+              alt=""></a>
+          <a href="https://www.facebook.com/yoshipottery" target=_blank> <img src="./assets/facebook-02.svg" alt=""></a>
+        </div>
+        <div class="menu-bottom-box3">
+          <a href="./contact.html" class="btn btn-secondary-outline">報名課程</a>
+          <a href="./contact.html" class="btn btn-secondary-outline">陶器訂製</a>
+        </div>
+        <p class="menu-copyright label">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+      </div>
+    </div>
+  </div>
+  <!--  ========== MENU ========== -->
   <main>
     <div class="left-fixed">
       <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
@@ -67,37 +99,37 @@
     <div class="art-wrap">
       <a class="arts-card arts-card-1">
         <div class="thumbnail">
-          <img src="./assets/arts_01.png" />
+          <img src="./assets/arts_01.png">
         </div>
         <p class="align-center">作品名稱</p>
       </a>
       <a class="arts-card arts-card-2">
         <div class="thumbnail">
-          <img src="./assets/arts_02.png" />
+          <img src="./assets/arts_02.png">
         </div>
         <p class="align-center">作品名稱</p>
       </a>
       <a class="arts-card arts-card-3">
         <div class="thumbnail">
-          <img src="./assets/arts_03.png" />
+          <img src="./assets/arts_03.png">
         </div>
         <p class="align-center">作品名稱</p>
       </a>
       <a class="arts-card arts-card-4">
         <div class="thumbnail">
-          <img src="./assets/arts_04.png" />
+          <img src="./assets/arts_04.png">
         </div>
         <p class="align-center">作品名稱</p>
       </a>
       <a class="arts-card arts-card-5">
         <div class="thumbnail">
-          <img src="./assets/arts_05.png" />
+          <img src="./assets/arts_05.png">
         </div>
         <p class="align-center">作品名稱</p>
       </a>
       <a class="arts-card arts-card-6">
         <div class="thumbnail">
-          <img src="./assets/arts_06.png" />
+          <img src="./assets/arts_06.png">
         </div>
         <p class="align-center">作品名稱</p>
       </a>
@@ -117,7 +149,7 @@
       </div>
       <!-- info -->
       <div class="ft-infobox">
-        <div class="label">950<br />台東縣台東市杭州街118號1樓</div>
+        <div class="label">950<br>台東縣台東市杭州街118號1樓</div>
         <div class="roboto">(+886) 921-271-867</div>
         <div class="roboto">yoshipottery@gmail.com</div>
       </div>
@@ -125,10 +157,10 @@
       <div class="brandbox dark-color">
         <div class="ft-follow-box">
           <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
-              alt="" /></a>
+              alt=""></a>
           <span class="label">/</span>
           <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
-              alt="" /></a>
+              alt=""></a>
         </div>
         <h4>
           yoshi pottery
@@ -142,11 +174,11 @@
     </div>
   </footer>
   <!--  ========== FOOTER ========== -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="./js/cursor.js"></script>
   <script src="./js/textHScroll.js"></script>
-  <!-- <script src="./js/scroll-GSAP.js"></script> -->
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
