--- a/works.html
+++ b/works.html
@@ -2,19 +2,16 @@
 <html lang="zh-Hant-TW">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
-    rel="stylesheet" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/main.css">
   <title>生活陶｜又煦陶作</title>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-  <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body onload="followMouse();">
@@ -104,7 +101,7 @@
           <a href="#" class="btn-text">READ MORE</a>
         </div>
         <p class="w-50">
-          沙點白釉以最實用的白色並帶有細微沙點，適合承裝任何食物飲料。<br />
+          沙點白釉以最實用的白色並帶有細微沙點，適合承裝任何食物飲料。<br>
           手工上釉每件作品均有不同流動表現。
         </p>
       </div>
@@ -112,7 +109,7 @@
       <div class="works-list wrap-row">
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_01.png" alt="" />
+            <img src="./assets/white_01.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -122,7 +119,7 @@
         </a>
         <a class="works-card" href="./work-temp.html">
           <div class="thumbnail">
-            <img src="./assets/white_02.png" alt="" />
+            <img src="./assets/white_02.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -132,7 +129,7 @@
         </a>
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_03.png" alt="" />
+            <img src="./assets/white_03.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -142,7 +139,7 @@
         </a>
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_04.png" alt="" />
+            <img src="./assets/white_04.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -152,7 +149,7 @@
         </a>
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_05.png" alt="" />
+            <img src="./assets/white_05.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -162,7 +159,7 @@
         </a>
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_06.png" alt="" />
+            <img src="./assets/white_06.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -172,7 +169,7 @@
         </a>
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_07.png" alt="" />
+            <img src="./assets/white_07.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -182,7 +179,7 @@
         </a>
         <a class="works-card">
           <div class="thumbnail">
-            <img src="./assets/white_08.png" alt="" />
+            <img src="./assets/white_08.png" alt="">
           </div>
           <div>
             <span class="align-left">作品名稱</span>
@@ -195,12 +192,12 @@
       <div class="works-series-wrap wrap-row">
         <h4 class="sub-title">其他系列</h4>
         <a class="w-45">
-          <img src="./assets/series_01.png" alt="" />
+          <img src="./assets/series_01.png" alt="">
           <h6 class="align-left">作品名稱</h6>
           <p>霧藍綠釉低調不搶眼並透出些微土色，帶有自然的感覺</p>
         </a>
         <a class="w-45">
-          <img src="./assets/series_02.png" alt="" />
+          <img src="./assets/series_02.png" alt="">
           <h6 class="align-left">作品名稱</h6>
           <p>霧藍綠釉低調不搶眼並透出些微土色，帶有自然的感覺</p>
         </a>
@@ -220,7 +217,7 @@
       </div>
       <!-- info -->
       <div class="ft-infobox">
-        <div class="label">950<br />台東縣台東市杭州街118號1樓</div>
+        <div class="label">950<br>台東縣台東市杭州街118號1樓</div>
         <div class="roboto">(+886) 921-271-867</div>
         <div class="roboto">yoshipottery@gmail.com</div>
       </div>
@@ -228,16 +225,16 @@
       <div class="brandbox dark-color">
         <div class="ft-follow-box">
           <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
-              alt="" /></a>
+              alt=""></a>
           <span class="label">/</span>
           <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
-              alt="" /></a>
+              alt=""></a>
         </div>
         <h4>
           yoshi pottery
           <div class="ft-ball"></div>
         </h4>
-        <p>生活器皿販售 / 陶藝課程教學</p>
+        <p>生活器皿販售 陶藝課程教學</p>
       </div>
     </div>
     <div class="copyright-footer">
@@ -245,36 +242,10 @@
     </div>
   </footer>
   <!--  ========== FOOTER ========== -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="./js/cursor.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.barres').click(function () {
-        $('.barres').toggleClass('active');
-      })
-    })
-
-    var timeline = new TimelineMax();
-
-    timeline.to(".menu", 1.5, {
-      left: '0%',
-      ease: Expo.easeInOut,
-      delay: -1.5
-    });
-    timeline.staggerFrom(".menu ul li", 0.4, {
-      x: -100,
-      opacity: 0
-    }, 0.1);
-
-    timeline.reverse();
-
-    $(document).on('click', '.barres', function () {
-      timeline.play();
-    });
-    $(document).on('click', 'a', function () {
-      timeline.reverse();
-      $('.barres').toggleClass('active');
-    })
-  </script>
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
