--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
         <div class="roboto">yoshipottery@gmail.com</div>
       </div>
       <!-- brand -->
+      <!-- brand -->
       <div class="brandbox dark-color">
         <div class="ft-follow-box">
           <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
