--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="classContainer">
         <div class="titlebox">
           <h1>課程教學</h1>
-          <h2>Course</h2>
+          <h2>COURSES</h2>
         </div>
         <div class="classContainerSm">
           <div class="classItem">
