--- a/index.html
+++ b/index.html
@@ -349,23 +349,16 @@
     </div>
   </footer>
   <!--  ========== FOOTER ========== -->
-
   <!--  ========== VENDORS ========== -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="./js/vendor/swiper-bundle.min.js"></script>
+  <script src="./js/vendor/gsap.js"></script>
+  <script src="./js/vendor/ScrollTrigger.js"></script>
   <!--  ========== VENDORS ========== -->
+  <script src="./js/HScroll-GSAP.js"></script>
+  <script src="./js/cursor.js"></script>
   <script src="./js/menu.js"></script>
-  <script>
-    if (window.screen.width > 780) {
-      document.write(
-        '<script src="./js/vendor/gsap.js"><\/script>' +
-        '<script src="./js/vendor/ScrollTrigger.js"><\/script>' +
-        '<script src="./js/HScroll-GSAP.js"><\/script>' +
-        '<script src="./js/cursor.js"><\/script>'
-      )
-    }
-  </script>
   <script>
     var swiper = new Swiper('.swiper-container', {
       slidesPerView: 1,
