--- a/index.html
+++ b/index.html
@@ -205,41 +205,51 @@
         <div class="classContainerSm">
           <div class="classItem">
             <div class="classCard">
-              <p>學習以土球、土條、土板三大類基礎做陶技法，<br>
-                製作日常中會使用到的物品。</p>
-              <img src="./assets/class_01.png" alt="">
-              <h5>手捏器皿</h5>
+              <a href="./class-temp.html">
+                <p>學習以土球、土條、土板三大類基礎做陶技法，<br>
+                  製作日常中會使用到的物品。</p>
+                <img src="./assets/class_01.png" alt="">
+                <h5>手捏器皿</h5>
+              </a>
             </div>
           </div>
           <div class="classItem">
             <div class="classCard">
-              <p>學習從掌上型小陶偶，
-                到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
-              <img src="./assets/class_02.png" alt="">
-              <h5>陶偶雕塑</h5>
+              <a href="">
+                <p>學習從掌上型小陶偶，
+                  到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
+                <img src="./assets/class_02.png" alt="">
+                <h5>陶偶雕塑</h5>
+              </a>
             </div>
           </div>
           <div class="classItem">
             <div class="classCard">
-              <p>學習以轆轤製作杯、碗、盤形，技巧較高，表面質感較為圓滑平整。</p>
-              <img src="./assets/class_03.png" alt="">
-              <h5>基礎拉胚</h5>
+              <a href="">
+                <p>學習以轆轤製作杯、碗、盤形，技巧較高，表面質感較為圓滑平整。</p>
+                <img src="./assets/class_03.png" alt="">
+                <h5>基礎拉胚</h5>
+              </a>
             </div>
           </div>
           <div class="classItem">
             <div class="classCard">
-              <p>給上過任何一期基礎陶藝課的學員。
-                可自由安排時段，可一週多堂，有利於作品進度穩定。適合有自己的創作想法，或是想精進技術的人。</p>
-              <img src="./assets/class_04.png" alt="">
-              <h5>進階創作</h5>
+              <a href="">
+                <p>給上過任何一期基礎陶藝課的學員。
+                  可自由安排時段，可一週多堂，有利於作品進度穩定。適合有自己的創作想法，或是想精進技術的人。</p>
+                <img src="./assets/class_04.png" alt="">
+                <h5>進階創作</h5>
+              </a>
             </div>
           </div>
           <div class="classItem">
             <div class="classCard">
-              <p>手捏器皿：可選一個陶碗、陶杯或盆栽。
-                拉胚+修胚體驗課：製作基本杯、碗。需安排不同天兩個時段。</p>
-              <img src="./assets/class_05代換.png" alt="">
-              <h5>體驗 / 團體課</h5>
+              <a href="">
+                <p>手捏器皿：可選一個陶碗、陶杯或盆栽。
+                  拉胚+修胚體驗課：製作基本杯、碗。需安排不同天兩個時段。</p>
+                <img src="./assets/class_05代換.png" alt="">
+                <h5>體驗 / 團體課</h5>
+              </a>
             </div>
           </div>
         </div>
