--- a/_test.html
+++ b/_test.html
@@ -124,11 +124,10 @@
     <div id="shadow"></div>
     <div id="box"></div>
   </div>
-  <h4>Loader #6</h4>
   <video autoplay muted loop id="brand-video" class="brand-video">
     <source src="./assets/yoshi-2.mp4" type="video/mp4">
   </video>
-  <h1>Create.</h1>
+  <h1>Create</h1>
   <div class="barres">
     <div class="hamburger1"></div>
     <div class="hamburger2"></div>
