--- a/contact.html
+++ b/contact.html
@@ -215,9 +215,9 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <!--  ========== VENDORS ========== -->
-  <script src="/js/labelTrans.js"></script>
-  <script src="/js/cursor.js"></script>
-  <script src="/js/menu.js"></script>
+  <script src="./js/labelTrans.js"></script>
+  <script src="./js/cursor.js"></script>
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
